Fix radio button question alignment on Twenty Seventeen (#2251)

--- a/assets/css/frontend/sensei.scss
+++ b/assets/css/frontend/sensei.scss
@@ -303,6 +303,7 @@ a.sensei-certificate-link {
               margin: 0 .382em 0 0;
             }
             label  {
+              display: inline;
               vertical-align: middle;
             }
           }
